--- a/pages/prices.html
+++ b/pages/prices.html
@@ -9,12 +9,12 @@ header: '/img/skinning.jpg'
 
 <h2 class="txt-h2 pb6">Yurt Rates</h2>
 
-<p>Each of our yurts cost <strong>$50 per person</strong> per night with varying minimums depending on weekdays or weekends/holidays.</p>
+<p>Each of our yurts cost <strong>$55 per person</strong> per night with varying minimums depending on weekdays or weekends/holidays.</p>
 <div class="align-center px36">
 <table class="table">
 	<tr>
 		<td style="max-width:40px;">Per Person Per Night</td>
-		<th>$50</th>
+		<th>$55</th>
 	</tr>
 </table>
 </div>
@@ -31,18 +31,18 @@ header: '/img/skinning.jpg'
 			</tr>
 			<tr>
 				<th>Lupine Yurt</th>
-				<td> $100 minimum<br>(or 2 people)</td>
-				<td> $200 minimum<br>(or 4 people)</td>
+				<td> $110 minimum<br>(or 2 people)</td>
+				<td> $220 minimum<br>(or 4 people)</td>
 			</tr>
 			</tr>
 				<th>Alpine Yurt</th>
-				<td> $200 minimum<br>(or 4 people)</td>
-				<td> $300 minimum<br>(or 6 people)</td>
+				<td> $220 minimum<br>(or 4 people)</td>
+				<td> $330 minimum<br>(or 6 people)</td>
 			</tr>
 	</table>
 </div>
 
-<p class="mt6">Each yurt sleeps 8 people comfortably, but you are more than welcome to bring as many friends as you would like at $50 per person.</p>
+<p class="mt6">Each yurt sleeps 6-8 people comfortably, but you are more than welcome to bring as many friends as you would like at $55 per person.</p>
 
 <p class="mt12">If you would like to share the yurt with others or would like more more people to split a nightly minimum, we encourage you to advertise your trip on our <a class="link" target="blank" href="http://facebook.com/yurtski.com/">facebook page</a> to find other skiers.</p>
 
@@ -86,47 +86,19 @@ header: '/img/skinning.jpg'
 
 <p class="pb24 border-b">We will try to fit your gear into one toboggan; however, if an additional gear haul is required, we charge an additional $200 per toboggan.</p>
 
-<h2 class="txt-h2 mt24">Yurt Rental Policy</h2>
-<ul>
-	<li><p>We collect 100% of your trip cost up front at the time of your booking.</p></li>
-	<li><p>Each yurt is exclusive, we do not offer open beds to other parties.</p></li>
-</ul>
+<h2 class="txt-h2 mt24 pb12">Yurt Rental Policy</h2>
+<p>YurtSki requires a <strong>50% nonrefundable deposit </strong>at the time of booking.</p>
+<p>There is a "Pay Now" link in your invoice that lets you pay the remaining balance up to 30 days before your trip.  <strong><em>We will charge any outstanding balance to your credit card 30 days prior to your trip. </em></strong>If booking less than 30 days in advance, we require you to pay in full.
+</p>
 
-<h4 class="txt-h4 mt12">Cancellation</h4>
-<p>You can cancel your reservation for a 50% refund up to 30 days prior to your trip start date. After that we cannot offer a refund. To cancel, please <a class='link' href="mailto:info@yurtski.com">email</a> or call us at <a class="link" href="tel:+14068484824">(406) 848-4824</a></p>
+<!-- use this link when we go live: https://yurtski.checkfront.com/reserve/?login=1 -->
 
-<!--
+<p>Using the "Pay Now" link also allows you to login or create an account (simple and free) with <a class="link" href="#" target="_blank">checkfront.com</a>, where you can <em>modify</em> or <em>cancel</em> your bookings up to 30 days prior to your start date. Perhaps you decided you want a gear haul? Maybe an extra toboggan? You can do it all online!</p>
 
+<h4 class="txt-h4 mt12 py6">Cancellation</h4>
 
-<div class='flex-parent flex-parent--wrap'>
+<p>You can cancel your trip up to 30 days prior to your start date <a class="link" href="#" target="_blank">online</a>, by email: <a class="link" href="mailto:info@yurtski.com">info@yurtski.com</a>, or by phone: <a class="link" href="tel:+14068484824">(406) 848-4824</a>. Your deposit will not be refunded, but you will not be charged for the remaining balance.</p></li>
 
-	<div class='flex-child flex-child--no-shrink w360 px12 pb12 border-b'>
-		<h2 class="py6 align-center">Lupine Yurt</h2>
-		<img src='/img/lupine-yurt-snow.jpg'>
- 		Sleeps 8 guests at approximiately 6,600 feet.
-		{% include booknow.html %}
-	</div>
-
-	<div class='flex-child flex-child--no-shrink w360 px12 pb12 border-b'>
-		<h2 class="py6 align-center">Alpine Yurt</h2>
-		<img src='/img/alpine-yurt.png'>
-		Sleeps 8 guests at approxmimately 6,800 feet.
-		{% include booknow.html %}
-	</div>
-
-	<div class='flex-child flex-child--no-shrink w360 pt24 px12'>
-		<h2 class="py6 align-center">Gear Haul</h2>
-		<img src='/img/gearhaul.jpg'>
-		<p>Take the weight off your back and let us haul in your food, drink and equipment. $65 per person. Click <em>Book Now</em> below to see the gear haul availability schedule.</p>
-		{% include booknow.html %}
-	</div>
-
-	<div class='flex-child flex-child--no-shrink w360 pt24 px12'>
-		<h2 class="py6 align-center">Classes &amp; Clinics</h2>
-		<img src='/img/classes.jpg'>
-		<p>Attend a backcountry skiing clinic or an avalanche safety course at the yurts! For the most up-to-date information, see our <a class="link" href="//facebook.com/yurtski/">Facebook Page</a>.</p> If you'd like to run a course or clinic, please <a class="link" href="mailto:info@yurtski.com">contact us</a>, we'd love to work with you!
-	</div>
-
-</div> -->
+<p><em>Trips cancelled less than 1 month prior to the start date are still required to be paid in full and are nonrefundable. We will charge the remaining balance to the card used at booking.</em></p></li>
 
 {% include bottom_text.html %}
