adding more to the yurts page

--- a/pages-classes/04-missoula-avy-1.html
+++ b/pages-classes/04-missoula-avy-1.html
@@ -4,8 +4,9 @@ header: '/img/yurts-night-bg.jpg'
 layout: class
 description: >
   <p>January 12 - 14, 2019</p>
+  This class is booked through <a class="link" target="_blank" href="https://missoulaavalanche.org/education/">Missoula Avalanche</a>
 ---
 
 <div class="py24">
-  To book this course, please visit the Missoula Avalanche Center: <a class="link" target="_blank" href="https://missoulaavalanche.org/">https://missoulaavalanche.org/</a>
+  To book this course, please visit the Missoula Avalanche Center: <a class="link" target="_blank" href="https://missoulaavalanche.org/education/">https://missoulaavalanche.org/education/</a>
 </div>
