--- a/pages/classes.html
+++ b/pages/classes.html
@@ -3,7 +3,7 @@ layout: page
 title: Classes at Yurtski for the 2018 - 2019 Season
 permalink: /classes
 navigation_title: Classes
-header: '/img/yurts-night-bg.jpg'
+header: '/img/bowl-small.jpeg'
 date: '20181207'
 order: 3
 ---
