--- a/pages/yurts.html
+++ b/pages/yurts.html
@@ -30,32 +30,17 @@ header: '/img/yurts-night-bg.jpg'
 
 
 <h4 class="txt-h4 border-b">Getting to the Yurts</h4>
-<p class="pt6">The ski into the yurts is 8 miles and 1,500 ft. Additionally, there is an 11 mile snowmobile approach. If you opt for our gear haul + tow service, we will haul your gear <strong>all the way to the yurt</strong> and tow your party across all but 1.5 miles of the 8 mile ski.</p>
-
-<!--
-
-<div class='flex-parent flex-parent--wrap'>
-
-	<div class='flex-child flex-child--no-shrink w360 px12'>
-		<img src='/img/lupine-yurt-snow.jpg'>
-	</div>
-	<div class='flex-child w240 flex-child--grow'>
-		<p>The Seeley-Swan area of Montana is known for its colder weather and heavier snow falls. This translates to incredible cold smoke powder skiing. Storms dumping multiple feet of snow are not uncommon.  The immediate Yurtski terrain offers skiing that ranges from steep cliff sections and chutes to mellow burnt tree runs which funnel back towards the yurts. There is also ample opportunity to tour the ridge and drop off the backside towards the Bob Marshall & Scapegoat Wilderness to a lake for lunch and laps.</p>
-	</div>
-</div> -->
+<p class="pt6">The ski into the yurts is 8 miles with 1,500 ft elevation gain. Additionally, there is an 11 mile snowmobile approach. If you opt for our gear haul + tow service, we will haul your gear <strong>all the way to the yurt</strong> and tow your party across all but 1.5 miles of the 8 mile ski.</p>
 
 <h4 class="txt-h4 border-b pt24">Life at the Yurts</h4>
 
 <p class="pt6">The yurts feature wood stoves for heat and clotheslines and hooks to hang and dry your gear. Each yurt has a stocked wood pile and axes to keep the stove burning through the night.</p>
 
-<p class="pt6">Each yurt is equipped with a well-stocked kitchen including pots+pans, kettles, (new!) knives, cutting boards, utensils, mugs, plates, and bowls for 8. There are three burner propane stoves and each yurt has a sink that filters to a greywater drain.
+<p class="pt6">Each yurt is equipped with a well-stocked kitchen including pots+pans, kettles, knives, cutting boards, utensils, mugs, plates, and bowls for 8. There are three burner propane stoves and each yurt has a sink that filters to a greywater drain.
 
 <img class="mt6" src="/img/inside-yurt.jpg">
 
 <p class="pt6">Drinking water can be retrieved on the way into the yurts from a mountain spring so that you don't have to melt snow. In order to answer nature’s call in comfort there is a three sided outhouse located directly behind each yurt. There is also a Life flight extraction kit (helicopter specific backboard, splints, neck braces, emergency blanket, six man carry, basic first aid, rescue toboggan).</p>
-
-
-
 
 <div class="flex-parent">
 	<div class="flex-child">
@@ -65,8 +50,19 @@ header: '/img/yurts-night-bg.jpg'
 	</div>
 </div>
 
-<!-- FareHarbor calendar -->
-<!-- <script src="https://fareharbor.com/embeds/script/calendar/yurtski/?fallback=simple&full-items=yes"></script> -->
+<h4 class="txt-h4 border-b pt24 mb12">Skiing at the Yurts</h4>
+<p>Check out the video below for a day-in-the-life at YurtSki:</p>
+<div class="align-center">
+<iframe class="embedded-video" src="https://www.youtube.com/embed/cQxT1Rym_48" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+</div>
+
+<p class="pt6">The Seeley-Swan area of Montana is known for its colder weather and heavier snow falls. This translates to incredible cold smoke powder skiing. Storms dumping multiple feet of snow are not uncommon. The immediate Yurtski terrain consists of a horseshoe shaped ridge that is separated into three main bowls by short finger ramps. The skiing in these areas ranges from steep cliff sections and chutes to mellow burnt tree runs which funnel back towards the yurts. There is also ample opportunity to tour the ridge and drop off the backside towards the Bob Marshall & Scapegoat Wilderness. Longer tours may decide to drop off the backside to a lake for lunch and laps.</p>
+
+
+<img src="/img/bowl-small.jpeg">
+
+<h5 class="txt-h5 pt24">What about the burn?</h5>
+<p class="pt6">The summer 2017 forest fires opened up terrain never really considered before! There are now incredible open tree runs right out the front door of the yurt down into the gulley. If you liked skiing the classic "burnt trees" before, you're in for a treat!</p>
 
 
 {% include bottom_text.html %}
