--- a/pages/booking.html
+++ b/pages/booking.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: Book with YurtSki!
-permalink: /book
+permalink: /book/
 navigation_title: Book Now
 header: '/img/yurts-night-bg.jpg'
 order: 10
