--- a/pages/classes.html
+++ b/pages/classes.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: Classes at Yurtski for the 2018 - 2019 Season
-permalink: /classes
+permalink: /classes/
 navigation_title: Classes
 header: '/img/bowl-small.jpeg'
 date: '20181207'
