--- a/pages/prices.html
+++ b/pages/prices.html
@@ -2,7 +2,7 @@
 layout: page
 title: What We Offer
 navigation_title: Prices
-permalink: /pricing
+permalink: /pricing/
 order: 2
 header: '/img/skinning.jpg'
 ---
