--- a/pages/yurts.html
+++ b/pages/yurts.html
@@ -2,7 +2,7 @@
 layout: page
 title: About The Yurts
 navigation_title: The Yurts
-permalink: /yurts
+permalink: /yurts/
 order: 1
 header: '/img/yurts-night-bg.jpg'
 ---
