--- a/pages/about_us.html
+++ b/pages/about_us.html
@@ -2,7 +2,7 @@
 layout: page
 title: About Us
 navigation_title: About Us
-permalink: /about-us
+permalink: /about-us/
 order: 4
 header: /img/ridge-bg.jpg
 ---
