--- a/pages/prices.html
+++ b/pages/prices.html
@@ -7,6 +7,16 @@ order: 2
 header: '/img/skinning.jpg'
 ---
 
+<div class="txt-blockquote txt-l color-white round-bold border bg-green-light py6 mb12">
+	<p class="color-white">We are happy to announce the 2018-2019 season at YurtSki will offer:</p>
+	<ul class="txt-ul">
+		<li><p><a class="link">Self-Sufficient Yurt Rentals</a><span class="txt-m color-white"> (We tell you where to go, you do the rest)</span></p></li>
+		<li>Gear Hauling</li>
+		<li>Catered Trips</li>
+	</ul>
+	<p class="txt-m"> -The YurtSki Team</p>
+ </div>
+
 <h2 class="txt-h2 pb6">Yurt Rates</h2>
 
 <p>Each of our yurts cost <strong>$55 per person</strong> per night with varying minimums depending on weekdays or weekends/holidays.</p>
@@ -84,7 +94,26 @@ header: '/img/skinning.jpg'
 
 <p class="mt12">Each toboggan is approximately 3' by 8' and can carry up to 400 lbs of gear. A group of 6 for 3 nights can usually fit all of their gear in one toboggan.</p>
 
-<p class="pb24 border-b">We will try to fit your gear into one toboggan; however, if an additional gear haul is required, we charge an additional $200 per toboggan.</p>
+<p>We will try to fit your gear into one toboggan; however, if an additional gear haul is required, we charge an additional $200 per toboggan.</p>
+
+<h2 class="txt-h2 mt24">Catering</h2>
+<p class="py6">Forget about planning a menu, let YurtSki take care of the cooking and cleaning for you!</p>
+
+<p>Our chefs will work with your group before your trip to plan a custom menu that fulfills all of your culinary desires while meeting any and all dietary restrictions and preferences.</p>
+
+<div class="align-center px36">
+	<table class="table">
+		<tr>
+			<td style="max-width:40px;">Per Night</td>
+			<th>$500</th>
+		</tr>
+	</table>
+	</div>
+
+
+<p class="txt-em pb24 border-b">Alochol is not included, though wine pairings may be suggested.</p>
+
+
 
 <h2 class="txt-h2 mt24 pb12">Yurt Rental Policy</h2>
 <p>YurtSki requires a <strong>50% nonrefundable deposit </strong>at the time of booking.</p>
