moving to front page as well

--- a/pages/prices.html
+++ b/pages/prices.html
@@ -7,17 +7,9 @@ order: 2
 header: '/img/skinning.jpg'
 ---
 
-<div class="txt-blockquote txt-l color-white round-bold border bg-green-light py6 mb12">
-	<p class="color-white">We are happy to announce the 2018-2019 season at YurtSki will offer:</p>
-	<ul class="txt-ul">
-		<li><p><a class="link">Self-Sufficient Yurt Rentals</a><span class="txt-m color-white"> (We tell you where to go, you do the rest)</span></p></li>
-		<li>Gear Hauling</li>
-		<li>Catered Trips</li>
-	</ul>
-	<p class="txt-m"> -The YurtSki Team</p>
- </div>
+{% include offerings.html %}
 
-<h2 class="txt-h2 pb6">Yurt Rates</h2>
+<h2 id="rentals" class="txt-h2 pb6">Yurt Rates</h2>
 
 <p>Each of our yurts cost <strong>$55 per person</strong> per night with varying minimums depending on weekdays or weekends/holidays.</p>
 <div class="align-center px36">
@@ -56,7 +48,7 @@ header: '/img/skinning.jpg'
 
 <p class="mt12">If you would like to share the yurt with others or would like more more people to split a nightly minimum, we encourage you to advertise your trip on our <a class="link" target="blank" href="http://facebook.com/yurtski.com/">facebook page</a> to find other skiers.</p>
 
-<h2 class="txt-h2 mt24">Snowmobile Gear Haul + Tow</h2>
+<h2 id="gear-haul" class="txt-h2 mt24">Snowmobile Gear Haul + Tow</h2>
 <p class="">We have large gear hauling toboggans to take the weight off your back (and allow you to bring more beer)! The snowmobile route to the yurt is 11 miles. <strong>We will tow your gear all the way to the yurt</strong>.</p>
 
 <p>The ski route to the yurt is only 8 miles. Gear haul includes a tow rope for members of your group for all but 1.5 miles of the 8 mile ski. These 1.5 miles include a 1,500ft climb. If there is a lot of new snow, our snowmobile driver will bring his skis and can break in the skin track for you if requested. <a target="_blank" class="link" href="#">Click here for the map.</a></p>
@@ -96,7 +88,7 @@ header: '/img/skinning.jpg'
 
 <p>We will try to fit your gear into one toboggan; however, if an additional gear haul is required, we charge an additional $200 per toboggan.</p>
 
-<h2 class="txt-h2 mt24">Catering</h2>
+<h2 id="catering" class="txt-h2 mt24">Catering</h2>
 <p class="py6">Forget about planning a menu, let YurtSki take care of the cooking and cleaning for you!</p>
 
 <p>Our chefs will work with your group before your trip to plan a custom menu that fulfills all of your culinary desires while meeting any and all dietary restrictions and preferences.</p>
