added all of this

--- a/pages/prices.html
+++ b/pages/prices.html
@@ -48,14 +48,23 @@ header: '/img/skinning.jpg'
 
 <p class="mt12">If you would like to share the yurt with others or would like more more people to split a nightly minimum, we encourage you to advertise your trip on our <a class="link" target="blank" href="http://facebook.com/yurtski.com/">facebook page</a> to find other skiers.</p>
 
+{% include booknow.html %}
+
+
+
+
+<!-- GEAR HAUL -->
+
+
+
+
+
 <h2 id="gear-haul" class="txt-h2 mt24">Snowmobile Gear Haul + Tow</h2>
 <p class="">We have large gear hauling toboggans to take the weight off your back (and allow you to bring more beer)! The snowmobile route to the yurt is 11 miles. <strong>We will tow your gear all the way to the yurt</strong>.</p>
 
-<p>The ski route to the yurt is only 8 miles. Gear haul includes a tow rope for members of your group for all but 1.5 miles of the 8 mile ski. These 1.5 miles include a 1,500ft climb. If there is a lot of new snow, our snowmobile driver will bring his skis and can break in the skin track for you if requested. <a target="_blank" class="link" href="#">Click here for the map.</a></p>
+<p>The ski route to the yurt is only 8 miles. Gear haul includes a tow rope for members of your group for all but 1.5 miles of the 8 mile ski. These 1.5 miles include a 1,500ft climb. If there is a lot of new snow, our snowmobile driver will bring his skis and can break in the skin track for you if requested. We will send you maps and more informtion with confirmation of your reservation. </p>
 
-<!-- <p>If your group wants to be towed all the way to the yurt along the 11 mile snowmobile road, our driver will make an extra trip for the cost of an extra toboggan. This decision can be made at the trailhead.</p -->
-
-<p>To accomdate guests to both yurts, we offer two fixed times for gear hauls: <strong>8:30am</strong> and <strong>11:30am</strong>. These are first-come, first-serve time slots purchased online with your reservation at the base prices below. If you would like to book any other time that works better for your group, perhaps after work or one of the fixed times already reserved by another party, our gear haul drivers are happy to accomodate for a $50 surcharge.</p>
+<p>To accomdate guests to both yurts, we offer two fixed times for gear hauls: <strong>8:30am</strong> and <strong>11:30am</strong>. These are first-come, first-serve time slots purchased online with your reservation at the base prices below. If you would like to book <strong>any time</strong> that works better for your group, perhaps after work or one of the fixed times already reserved by another party, our gear haul drivers are happy to accomodate for a $50 surcharge.</p>
 
 <div class="align-center px36">
 	<table class="table">
@@ -84,14 +93,22 @@ header: '/img/skinning.jpg'
 
 <p class="mt12">We will coordinate your gear haul out time at the trailhead.</p>
 
-<p class="mt12">Each toboggan is approximately 3' by 8' and can carry up to 400 lbs of gear. A group of 6 for 3 nights can usually fit all of their gear in one toboggan.</p>
+<p class="mt12">Each toboggan is approximately 3' by 8' and can carry up to 350 lbs. A group of 6 for 3 nights can usually fit all of their gear in one toboggan. We will try to fit your gear into one toboggan; however, if an additional gear haul is required, we charge an additional $200 per toboggan.</p>
 
-<p>We will try to fit your gear into one toboggan; however, if an additional gear haul is required, we charge an additional $200 per toboggan.</p>
+<p class="mt12"><strong>How To Book: </strong><a class="link" href="/book/">Reserve a yurt</a> and add the Gear Haul items as add-on items at checkout.</p>
+
+
+
+<!-- CATERING -->
+
+
+
+
 
 <h2 id="catering" class="txt-h2 mt24">Catering</h2>
 <p class="py6">Forget about planning a menu, let YurtSki take care of the cooking and cleaning for you!</p>
 
-<p>Our chefs will work with your group before your trip to plan a custom menu that fulfills all of your culinary desires while meeting any and all dietary restrictions and preferences.</p>
+<p>Our chef will work with your group before your trip to plan a custom menu that fulfills all of your culinary desires while meeting any and all dietary restrictions and preferences.</p>
 
 <div class="align-center px36">
 	<table class="table">
@@ -100,10 +117,18 @@ header: '/img/skinning.jpg'
 			<th>$500</th>
 		</tr>
 	</table>
-	</div>
+</div>
+
+<p class="txt-em mt12 mb6">Available for groups of 6 - 8 at the Alpine Yurt only.</p>
+<p class="txt-em mt6">Alochol is not included, though wine and beer pairings may be suggested.</p>
+
+<p class="mt12  pb24 border-b"><strong>How To Book: </strong></strong><a class="link" href="/book/">Reserve the <em>Alpine Yurt</em></a> and choose "Catered Trip" as an add-on at checkout.</p>
 
 
-<p class="txt-em pb24 border-b">Alochol is not included, though wine pairings may be suggested.</p>
+
+
+<!-- RENTAL POLICY -->
+
 
 
 
