ready to go live

--- a/pages/prices.html
+++ b/pages/prices.html
@@ -99,6 +99,7 @@ header: '/img/skinning.jpg'
 
 
 
+
 <!-- CATERING -->
 
 
@@ -113,7 +114,7 @@ header: '/img/skinning.jpg'
 <div class="align-center px36">
 	<table class="table">
 		<tr>
-			<td style="max-width:40px;">Per Night</td>
+			<td style="max-width:40px;"><strong>Per Night</strong><br>Includes all meals while at the yurt: breakfast, lunch, and 3 course dinner.</td>
 			<th>$500</th>
 		</tr>
 	</table>
@@ -123,6 +124,7 @@ header: '/img/skinning.jpg'
 <p class="txt-em mt6">Alochol is not included, though wine and beer pairings may be suggested.</p>
 
 <p class="mt12  pb24 border-b"><strong>How To Book: </strong></strong><a class="link" href="/book/">Reserve the <em>Alpine Yurt</em></a> and choose "Catered Trip" as an add-on at checkout.</p>
+
 
 
 
