updating the typos

--- a/pages/prices.html
+++ b/pages/prices.html
@@ -114,7 +114,7 @@ header: '/img/skinning.jpg'
 <div class="align-center px36">
 	<table class="table">
 		<tr>
-			<td style="max-width:40px;"><strong>Per Night</strong><br>Includes all meals while at the yurt: breakfast, lunch, and 3 course dinner.</td>
+			<td style="max-width:40px;"><strong>Per Night</strong><br>Includes all meals while at the yurt: breakfast, lunch, and a 3 course dinner.</td>
 			<th>$500</th>
 		</tr>
 	</table>
