--- a/pages/prices.html
+++ b/pages/prices.html
@@ -64,7 +64,7 @@ header: '/img/skinning.jpg'
 
 <p>The ski route to the yurt is only 8 miles. Gear haul includes a tow rope for members of your group for all but 1.5 miles of the 8 mile ski. These 1.5 miles include a 1,500ft climb. If there is a lot of new snow, our snowmobile driver will bring his skis and can break in the skin track for you if requested. We will send you maps and more informtion with confirmation of your reservation. </p>
 
-<p>To accomdate guests to both yurts, we offer two fixed times for gear hauls: <strong>8:30am</strong> and <strong>11:30am</strong>. These are first-come, first-serve time slots purchased online with your reservation at the base prices below. If you would like to book <strong>any time</strong> that works better for your group, perhaps after work or one of the fixed times already reserved by another party, our gear haul drivers are happy to accomodate for a $50 surcharge.</p>
+<p>To accommodate guests to both yurts, we offer two fixed times for gear hauls: <strong>8:30am</strong> and <strong>11:30am</strong>. These are first-come, first-serve time slots purchased online with your reservation at the base prices below. If you would like to book <strong>any time</strong> that works better for your group, perhaps after work or one of the fixed times already reserved by another party, our gear haul drivers are happy to accomodate for a $50 surcharge.</p>
 
 <div class="align-center px36">
 	<table class="table">
