--- a/pages/prices.html
+++ b/pages/prices.html
@@ -141,11 +141,11 @@ header: '/img/skinning.jpg'
 
 <!-- use this link when we go live: https://yurtski.checkfront.com/reserve/?login=1 -->
 
-<p>Using the "Pay Now" link also allows you to login or create an account (simple and free) with <a class="link" href="#" target="_blank">checkfront.com</a>, where you can <em>modify</em> or <em>cancel</em> your bookings up to 30 days prior to your start date. Perhaps you decided you want a gear haul? Maybe an extra toboggan? You can do it all online!</p>
+<p>Using the "Pay Now" link also allows you to login or create an account (simple and free) with <a class="link" href="https://yurtski.checkfront.com/reserve/?date=20181203&category_id=2&login=true" target="_blank">yurtski.checkfront.com</a>, where you can <em>modify</em> or <em>cancel</em> your bookings up to 30 days prior to your start date. Perhaps you decided you want a gear haul? Maybe an extra toboggan? You can do it all online!</p>
 
 <h4 class="txt-h4 mt12 py6">Cancellation</h4>
 
-<p>You can cancel your trip up to 30 days prior to your start date <a class="link" href="#" target="_blank">online</a>, by email: <a class="link" href="mailto:info@yurtski.com">info@yurtski.com</a>, or by phone: <a class="link" href="tel:+14068484824">(406) 848-4824</a>. Your deposit will not be refunded, but you will not be charged for the remaining balance.</p></li>
+<p>You can cancel your trip up to 30 days prior to your start date <a class="link" href="https://yurtski.checkfront.com/reserve/?date=20181203&category_id=2&login=true" target="_blank">online</a>, by email: <a class="link" href="mailto:info@yurtski.com">info@yurtski.com</a>, or by phone: <a class="link" href="tel:+14068484824">(406) 848-4824</a>. Your deposit will not be refunded, but you will not be charged for the remaining balance.</p></li>
 
 <p><em>Trips cancelled less than 1 month prior to the start date are still required to be paid in full and are nonrefundable. We will charge the remaining balance to the card used at booking.</em></p></li>
 
