--- a/index.html
+++ b/index.html
@@ -21,4 +21,10 @@ subTitle: Montana Backcountry Skiing & Lodging in the Swan Range
 <iframe class="embedded-video" src="https://www.youtube.com/embed/cQxT1Rym_48" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 </div>
 
+<div class="mt24 mb24 align-center">
+  <img class="mx-auto" src="img/somuchsnow-medium.jpg">
+  <p class="mx-auto txt-em">Alpine Yurt, February 2018</p>
+</div>
+
+
 {% include bottom_text.html %}
