adding the USDA equal opportunity

--- a/index.html
+++ b/index.html
@@ -26,5 +26,7 @@ subTitle: Montana Backcountry Skiing & Lodging in the Swan Range
   <p class="mx-auto txt-em">Alpine Yurt, February 2018</p>
 </div>
 
+<p class="txt-em">In accordance with Federal law and U.S. Department of Agriculture policy, this institution is prohibited from discriminating on the basis of race, color, national origin, sex, age, or disability. (Not all prohibited bases apply to all programs.)<br>To file a complaint of discrimination: write USDA, Director, Office of Civil Rights, Room 326-W, Whitten Building, 1400 Independence Avenue, SW, Washington D.C. 20250-9410 or call (202) 720-5964 (voice and TDD). USDA is an equal opportunity provider and employer.</p>
+
 
 {% include bottom_text.html %}
