classes are almost live

--- a/pages-classes/01-womens-clinic.html
+++ b/pages-classes/01-womens-clinic.html
@@ -1,9 +1,11 @@
 ---
 title: Women's Backcountry Ski Clinic
 header: '/img/yurts-night-bg.jpg'
-date: '20181207'
+widget_date: '20181207'
 layout: class
 permalink: /womens-clinic
-description: >
-  <p>December 7 - 9, 2018</p>
+date_string: "December 7 - 9, 2018"
+description: A Women's Only Backcountry Ski Clinic taught by Darcy
 ---
+
+More description of content
