--- a/pages-classes/02-womens-avalanche-1.html
+++ b/pages-classes/02-womens-avalanche-1.html
@@ -1,9 +1,9 @@
 ---
 title: Women's Avalanche 1 Course
 header: '/img/yurts-night-bg.jpg'
-date: '20181214'
+widget_date: '20181214'
 layout: class
 permalink: /womens-avy-one
-description: >
-  <p>December 14 - 16, 2018</p>
+date_string: "December 14 - 16, 2018"
+description: "A Women's Only AIARE Avalanche 1 Course"
 ---
