--- a/pages-classes/04-missoula-avy-1.html
+++ b/pages-classes/04-missoula-avy-1.html
@@ -2,11 +2,14 @@
 title: "Missoula Avalanche Center: Avalanche 1 Course"
 header: '/img/yurts-night-bg.jpg'
 layout: class
+date_string: "January 12 - 14, 2019"
 description: >
-  <p>January 12 - 14, 2019</p>
-  This class is booked through <a class="link" target="_blank" href="https://missoulaavalanche.org/education/">Missoula Avalanche</a>
+  This class is booked through The Missoula Avalanche Center
 ---
 
 <div class="py24">
-  To book this course, please visit the Missoula Avalanche Center: <a class="link" target="_blank" href="https://missoulaavalanche.org/education/">https://missoulaavalanche.org/education/</a>
+
+  <p>YurtSki is proud to be a venue for two Avalanche 1 Courses offered by the Missoula Avalanche Center this season. </p>
+
+  <p>To book this course, please visit the Missoula Avalanche Center: <a class="link" target="_blank" href="https://missoulaavalanche.org/education/">https://missoulaavalanche.org/education/</a></p>
 </div>
