--- a/pages/classes.html
+++ b/pages/classes.html
@@ -4,18 +4,19 @@ title: Classes at Yurtski for the 2018 - 2019 Season
 permalink: /classes/
 navigation_title: Classes
 header: '/img/bowl-small.jpeg'
-date: '20181207'
+widget_date: '20181207'
+date_string: 
 order: 3
 ---
 
 <div class='flex-parent flex-parent--wrap'>
 
 	<div class='flex-child flex-child--no-shrink w360 pt24 px12'>
-    <p>We are very excited to continue offering classes and clinics at YurtSki.</p>
+    <p class="txt-l"><span class="color-green txt-l">New This Year!</span> YurtSki is now an <a class="link" target="_blank" href="//aiare.org">AIARE</a> course provider.</p>
 
-    <p>Once we finalize the details with the instructors and organizers, booking information will be available at the links below.</p>
+    <p>YurtSki is the perfect spot to take a backcountry ski clinic or take an Avalanche course to learn about backcountry hazards.</p>
 
-    <p>In the meantime, be sure to checkout our <a target="_blank" class="link" href="//facebook.com/yurtski">Facebook Page</a> for the most up-to-date information.</p>
+    <p>These classes can house up to 12 students between the two yurts and are fully catered.</p>
 
 	</div>
 
@@ -24,20 +25,9 @@ order: 3
 	</div>
 </div>
 
-<h2 class="mt12 py12 border-b">Upcoming Classes &amp; Clinics: </h2>
+<h2 id="upcoming-classes" class="mt12 py12 border-b">Upcoming Classes &amp; Clinics: </h2>
 
-{% for page in site.pages %}
+{% include list-classes.html %}
 
-  {% if page.layout == 'class' %}
-
-    <div class="pt12 px24 mb24">
-      <a href="#" class="txt-h4 link">{{page.title}}</a></h4>
-      <p class="mt6">{{page.description}}</p>
-
-    </div>
-
-  {% endif %}
-
-{% endfor %}
 
 <p class="mt24 py12 border-t">If you'd like to run a course or clinic at YurtSki, please <a class="link" href="mailto:info@yurtski.com">contact us</a>, we'd love to work with you!</p>
