--- a/pages-classes/03-avalanche-1.html
+++ b/pages-classes/03-avalanche-1.html
@@ -1,8 +1,10 @@
 ---
 title: Avalanche 1 Course
 header: '/img/yurts-night-bg.jpg'
-date: '20181228'
+widget_date: '20181228'
 layout: class
-description: >
-  <p>December 28 - 30, 2018</p>
+date_string: "December 28 - 30, 2018"
+description: An AIARE Avalanche 1 Course
 ---
+
+YurtSki Avlanche 1 Description (AIARE)
