--- a/pages-classes/05-missoula-avy-1-2.html
+++ b/pages-classes/05-missoula-avy-1-2.html
@@ -2,9 +2,9 @@
 title: "Missoula Avalanche Center: Avalanche 1 Course"
 header: '/img/yurts-night-bg.jpg'
 layout: class
-description: >
-  <p>January 26 - 28, 2019</p>
-  This class is booked through <a class="link" target="_blank" href="https://missoulaavalanche.org/education/">Missoula Avalanche</a>
+date_string: "January 26 - 28, 2019"
+description: > 
+  This class is booked through The Missoula Avalanche Center
 ---
 
 <div class="py24">
