opening the courses

--- a/pages-classes/03-avalanche-1.html
+++ b/pages-classes/03-avalanche-1.html
@@ -4,7 +4,5 @@ header: '/img/yurts-night-bg.jpg'
 widget_date: '20181228'
 layout: class
 date_string: "December 28 - 30, 2018"
-description: An AIARE Avalanche 1 Course
+description: "AIARE Level 1 Course"
 ---
-
-YurtSki Avlanche 1 Description (AIARE)
