--- a/pages-classes/01-womens-clinic.html
+++ b/pages-classes/01-womens-clinic.html
@@ -5,7 +5,5 @@ widget_date: '20181207'
 layout: class
 permalink: /womens-clinic
 date_string: "December 7 - 9, 2018"
-description: A Women's Only Backcountry Ski Clinic taught by Darcy
+description: A Women's Only Backcountry Ski Clinic
 ---
-
-More description of content
