--- a/pages-classes/02-womens-avalanche-1.html
+++ b/pages-classes/02-womens-avalanche-1.html
@@ -5,5 +5,5 @@ widget_date: '20181214'
 layout: class
 permalink: /womens-avy-one
 date_string: "December 14 - 16, 2018"
-description: "A Women's Only AIARE Avalanche 1 Course"
+description: "A Women's Only AIARE Level 1 Course"
 ---
