updating permalinks for avy courses

--- a/pages-classes/04-missoula-avy-1.html
+++ b/pages-classes/04-missoula-avy-1.html
@@ -3,8 +3,8 @@ title: "Missoula Avalanche Center: Avalanche 1 Course"
 header: '/img/yurts-night-bg.jpg'
 layout: class
 date_string: "January 12 - 14, 2019"
-description: >
-  This class is booked through The Missoula Avalanche Center
+permalink: mac-
+description: This class is booked through The Missoula Avalanche Center
 ---
 
 <div class="py24">
@@ -12,4 +12,5 @@ description: >
   <p>YurtSki is proud to be a venue for two Avalanche 1 Courses offered by the Missoula Avalanche Center this season. </p>
 
   <p>To book this course, please visit the Missoula Avalanche Center: <a class="link" target="_blank" href="https://missoulaavalanche.org/education/">https://missoulaavalanche.org/education/</a></p>
+
 </div>
