--- a/pages-classes/05-missoula-avy-1-2.html
+++ b/pages-classes/05-missoula-avy-1-2.html
@@ -8,5 +8,8 @@ description: >
 ---
 
 <div class="py24">
-  To book this course, please visit the Missoula Avalanche Center: <a class="link" target="_blank" href="https://missoulaavalanche.org/education/">https://missoulaavalanche.org/education/</a>
+
+	<p>YurtSki is proud to be a venue for two Avalanche 1 Courses offered by the Missoula Avalanche Center this season. </p>
+  
+  	<p>To book this course, please visit the Missoula Avalanche Center: <a class="link" target="_blank" href="https://missoulaavalanche.org/education/">https://missoulaavalanche.org/education/</a></p>
 </div>
