adding link to aiare

--- a/pages/classes.html
+++ b/pages/classes.html
@@ -12,7 +12,7 @@ order: 3
 <div class='flex-parent flex-parent--wrap'>
 
 	<div class='flex-child flex-child--no-shrink w360 pt24 px12'>
-    <p class="txt-l"><span class="color-green txt-l">New This Year!</span> YurtSki is now an <a class="link" target="_blank" href="//aiare.org">AIARE</a> course provider.</p>
+    <p class="txt-l"><span class="color-green txt-l">New This Year!</span> YurtSki is now an <a class="link" target="_blank" href="http://avtraining.org/">AIARE</a> course provider.</p>
 
     <p>YurtSki is the perfect spot to take a backcountry ski clinic or take an Avalanche course to learn about backcountry hazards.</p>
 
