--- a/pages-classes/01-womens-clinic.html
+++ b/pages-classes/01-womens-clinic.html
@@ -3,7 +3,7 @@ title: Women's Backcountry Ski Clinic
 header: '/img/yurts-night-bg.jpg'
 widget_date: '20181207'
 layout: class
-permalink: /womens-clinic
+permalink: /womens-clinic/
 date_string: "December 7 - 9, 2018"
 description: A Women's Only Backcountry Ski Clinic
 ---
