--- a/pages-classes/02-womens-avalanche-1.html
+++ b/pages-classes/02-womens-avalanche-1.html
@@ -3,7 +3,7 @@ title: Women's Avalanche 1 Course
 header: '/img/yurts-night-bg.jpg'
 widget_date: '20181214'
 layout: class
-permalink: /womens-avy-one
+permalink: /womens-avy-one/
 date_string: "December 14 - 16, 2018"
 description: "A Women's Only AIARE Level 1 Course"
 ---
