--- a/pages-classes/03-avalanche-1.html
+++ b/pages-classes/03-avalanche-1.html
@@ -3,7 +3,7 @@ title: Avalanche 1 Course
 header: '/img/yurts-night-bg.jpg'
 widget_date: '20181228'
 layout: class
-permalink: aiare-avy-one
+permalink: /aiare-avy-one/
 date_string: "December 28 - 30, 2018"
 description: "AIARE Level 1 Course"
 ---
