--- a/pages-classes/04-missoula-avy-1.html
+++ b/pages-classes/04-missoula-avy-1.html
@@ -3,7 +3,7 @@ title: "Missoula Avalanche Center: Avalanche 1 Course"
 header: '/img/yurts-night-bg.jpg'
 layout: class
 date_string: "January 12 - 14, 2019"
-permalink: mac-
+permalink: /mac-avy-one/
 description: This class is booked through The Missoula Avalanche Center
 ---
 
