--- a/pages-classes/05-missoula-avy-1-2.html
+++ b/pages-classes/05-missoula-avy-1-2.html
@@ -3,8 +3,8 @@ title: "Missoula Avalanche Center: Avalanche 1 Course"
 header: '/img/yurts-night-bg.jpg'
 layout: class
 date_string: "January 26 - 28, 2019"
-description: > 
-  This class is booked through The Missoula Avalanche Center
+permalink: /mac-avy-one2/
+description: This class is booked through The Missoula Avalanche Center
 ---
 
 <div class="py24">
