updating yurts to include rich ranch link

--- a/pages/yurts.html
+++ b/pages/yurts.html
@@ -58,6 +58,24 @@ header: '/img/yurts-night-bg.jpg'
 
 <p class="pt6">The Seeley-Swan area of Montana is known for its colder weather and heavier snow falls. This translates to incredible cold smoke powder skiing. Storms dumping multiple feet of snow are not uncommon. The immediate Yurtski terrain consists of a horseshoe shaped ridge that is separated into three main bowls by short finger ramps. The skiing in these areas ranges from steep cliff sections and chutes to mellow burnt tree runs which funnel back towards the yurts. There is also ample opportunity to tour the ridge and drop off the backside towards the Bob Marshall & Scapegoat Wilderness. Longer tours may decide to drop off the backside to a lake for lunch and laps.</p>
 
+<h4 class="txt-h4 border-b pt24 mb12">The Rich Ranch: Lodging at the Trailhead</h4>
+Located just a quarter mile down the road from the YurtSki trailhead, <a class="link" target="_blank" href="http://richranch.com">Rich's Montana Guest Ranch</a> offers cabin rooms for rent. Their winter rates are: 
+
+<div class="align-center mt12 px36 mb24">
+	<table class="table">
+		<tr>
+			<th>Small Cabin Room</th>
+			<td>1 King Bed</td>
+			<td>$125 per night (plus tax)</td>
+		</tr>
+		</tr>
+			<th>Large Cabin Room</th>
+			<td>2 Queen Beds</td>
+			<td>$150 per night (plus tax)</td>
+		</tr>
+	</table>
+</div>
+
 
 <img src="/img/bowl-small.jpeg">
 
