updating owner page

--- a/pages/about_us.html
+++ b/pages/about_us.html
@@ -53,7 +53,7 @@ header: /img/ridge-bg.jpg
 	</div>
 </div>
 
-<div class="py24 flex-parent flex-parent--wrap">
+<!-- <div class="py24 flex-parent flex-parent--wrap">
 	<div class="flex-child flex-child--no-shrink">
 		<img class="bio" src="/img/Bob-skiing.jpg">
 	</div>
@@ -67,4 +67,4 @@ header: /img/ridge-bg.jpg
 		<p><strong>Dislikes:</strong> Vomiting</p>
 
 	</div>
-</div>
+</div> -->
